# chalice-book-api-cdk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: on-pull.yml  on-push.yml  pipeline.yml
book-api-frontend/: package.json
book-api-frontend/amplify/: team-provider-info.json
book-api-frontend/amplify/.config/: project-config.json
book-api-frontend/amplify/backend/: backend-config.json
book-api-frontend/src/: App.js  BookGrid.js  Books.js  book-api.js  index.css  useMutateBooks.js
chalice-cdk-project-files/infrastructure/: app.py
chalice-cdk-project-files/infrastructure/stacks/: chaliceapp.py
chalice-cdk-project-files/runtime/: app.py  requirements.txt
chalice-cdk-project-files/runtime/.chalice/: config.json
chalice-cdk-project-files/runtime/chalicelib/: db.py
go/csv_processor_function_code/: go.mod  go.sum  main.go  processCsv.go
go/user_api_function_code/: dynamodb.go  go.mod  go.sum  main.go
scripts/: update_terraform_asset_attributes.py  upload_go_binaries_to_s3.py
swagger/: admin-api-swagger.yaml  user-api-swagger.yaml
terraform/: .terraform.lock.hcl  main.tf  terraform.tf  variables.tf
terraform/modules/chalice_cdk/: aws_iam_policy_access_books_table.tf  aws_iam_policy_access_cloudwatch.tf  aws_iam_role_admin_api_handler_role.tf  aws_route53_record_admin_api.tf  variables.tf
terraform/modules/core/: aws_dynamodb_table_books_table.tf  outputs.tf  variables.tf
terraform/modules/csv_processor/: aws_iam_policy_access_admin_api.tf  aws_iam_policy_access_cloudwatch.tf  aws_iam_policy_access_csv_bucket.tf  aws_lambda_function_csv_processor.tf  aws_s3_bucket_csv_bucket.tf  main.tf  outputs.tf
terraform/modules/user_api/: aws_api_gateway_api_key_user_key.tf  aws_api_gateway_domain_name_client_dev.tf  aws_api_gateway_rest_api_user_api.tf  aws_iam_policy_access_books_table.tf  aws_iam_policy_access_cloudwatch.tf  main.tf  (+3 more)
tests/: __init__.py  request-items.json  start_tests.sh  test_app.py
tests/api/: admin_api_test.py  user_api_test.py
tests/python/: start_tests.sh
(+3 files in other folders)
