[tool.poetry]
name = "chalice-book-api-cdk"
version = "0.1.0"
description = ""
authors = ["Christian Birch <christian.birch@gmail.com>"]
readme = "README.md"
packages = [{include = "chalice_book_api_cdk"}]

[tool.poetry.dependencies]
python = "^3.9"
chalice = "^1.28.0"
boto3 = "^1.26.101"
pydantic = "^1.10.7"
pynamodb = "^5.4.1"
ulid-py = "^1.1.0"
devtools = "^0.10.0"

[tool.poetry.group.dev.dependencies]
aws-cdk-lib = "^2.70.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
